2008-01-21  Emmanuele Bassi,,,  <ebassi@sprite>

	* clutter/clutter-behaviour-depth.h:
	* clutter/clutter-behaviour-depth.c:
	(clutter_behaviour_depth_set_bounds),
	(clutter_behaviour_depth_get_bounds): Add the depth-start and
	depth-end accessors.

	* tests/test-depth.c (timeline_completed): Use set_bounds()
	instead of g_object_set().

	* clutter.symbols: Add clutter_behaviour_depth_set_bounds()
	and clutter_behaviour_opacity_get_bounds() to the list of
	public symbols.

2008-01-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-scale.c: Use separate variables for
	storing the scale boundaries; apparently, using arrays broke
	the python bindings. (#720)

2008-01-21  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-group.c:
	Make sure unrealizing a group also unrealizes children.

	* clutter/glx/clutter-stage-glx.c:
	Chain up to group unrealize to make sure textures get unrealized
	when changing context (see #718)

	* clutter/clutter-texture.c:
	Formatting cleanups

2008-01-21  Øyvind Kolås  <pippin@gimp.org>

	* tests/test-shader.c: fix incompatible types in shader programs

	Apparently floats can't be multiplied or divided with ints without
	explicit type casts. Use 2.0 or float(var) where appropriate. Patch
	from Tommi Komulainen (#715).

2008-01-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c (generate_enter_leave_events): Do not
	take the explicit reference, and let clutter_event_copy() do it
	for us. (#714, Neil Roberts)

2008-01-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-event.c (clutter_event_copy): Take an extra
	reference on the related actor in ClutterEventCrossing that we
	explicitly unref in clutter_event_free(). (#714, Neil Roberts)

2008-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-actors.c (input_cb): Fix the callback signature;
	hide the clicked actor only if it's a hand.

2008-01-18  Emmanuele Bassi  <ebassi@openedhand.com>
