@@ -1,5 +1,12 @@
 2008-01-21  Emmanuele Bassi,,,  <ebassi@sprite>
 
+	* clutter/clutter-behaviour-scale.c:
+	(clutter_behaviour_scale_set_property),
+	(clutter_behaviour_scale_class_init): Fix stupid typo in the
+	y-scale-end property declaration. (#720)
+
+2008-01-21  Emmanuele Bassi,,,  <ebassi@sprite>
+
 	* clutter/clutter-behaviour-depth.h:
 	* clutter/clutter-behaviour-depth.c:
 	(clutter_behaviour_depth_set_bounds),
